src/yarn/snapshots/errors___yarn_cache_get_error.snap
---
source: buildpacks/nodejs/src/yarn/errors.rs
---
- Debug Info:
  - Command failed `yarn config get cache-dir`
    exit status: 1
    stdout: <empty>
    stderr: <empty>

! Failed to read configured Yarn cache directory
!
! The Heroku Node.js buildpack was unable to read the configuration for the Yarn cache directory.
!
! The causes for this error are unknown. We do not have suggestions for diagnosis or a workaround at this time. You can help our understanding by sharing your buildpack log and a description of the issue at:
! https://github.com/heroku/buildpacks-nodejs/issues
!
! If you're able to reproduce the problem with an example application and the `pack` build tool (https://buildpacks.io/docs/for-platform-operators/how-to/integrate-ci/pack/), adding that information to the discussion will also help. Once we have more information around the causes of this error we may update this message.
