src/yarn/snapshots/errors___yarn_default_parse_error.snap
---
source: buildpacks/nodejs/src/yarn/errors.rs
---
- Debug Info:
  - Failed to parse version.

! Failed to parse default Yarn version
!
! The Heroku Node.js buildpack was unable to parse the default Yarn version.
!
! The causes for this error are unknown. We do not have suggestions for diagnosis or a workaround at this time. You can help our understanding by sharing your buildpack log and a description of the issue at:
! https://github.com/heroku/buildpacks-nodejs/issues
!
! If you're able to reproduce the problem with an example application and the `pack` build tool (https://buildpacks.io/docs/for-platform-operators/how-to/integrate-ci/pack/), adding that information to the discussion will also help. Once we have more information around the causes of this error we may update this message.
